--- a/index.html
+++ b/index.html
@@ -1,125 +1,1 @@
-{
-update: 1426525720,
-news: [
-{
-timestamp: 1427221800,
-img: {
-alt: "Ibra volta a pedir desculpas por chamar a França de "país de merda"",
-url: "http://www.clicrbs.com.br/rbs/image/17285059.jpg"
-},
-subtitle: "Atacante sueco destacou que não se referiu às pessoas e que palavras foram tiradas do contexto",
-type: "simple",
-tag: "Polêmica em Paris",
-title: "Ibra volta a pedir desculpas por chamar a França de "país de merda"",
-link: "http://zh.clicrbs.com.br/rs/noticia/2015/03/ibra-volta-a-pedir-desculpas-por-chamar-a-franca-de-pais-de-merda-4719580.html",
-source: {
-name: "ZH",
-icon: "http://adminocto.herokuapp.com/static/images/zh-big.png",
-url: "http://zh.clicrbs.com.br"
-},
-id: "4719580"
-},
-{
-timestamp: 1426525509,
-img: {
-alt: "Cantor Cauby Peixoto recupera-se em casa",
-url: "http://www.clicrbs.com.br/rbs/image/17285588.jpg"
-},
-subtitle: "Segundo a assessoria de imprensa do artista, ele está muito bem",
-type: "simple",
-tag: "Depois de um mês no hospital",
-title: "Cantor Cauby Peixoto recupera-se em casa",
-link: "http://zh.clicrbs.com.br/rs/noticia/2015/03/cantor-cauby-peixoto-recupera-se-em-casa-4719579.html",
-source: {
-name: "ZH",
-icon: "http://adminocto.herokuapp.com/static/images/zh-big.png",
-url: "http://zh.clicrbs.com.br"
-},
-id: "4719579"
-},
-{
-timestamp: 1426523969,
-tag: "Violência",
-subtitle: "Vítima teve orelha, rosto, ombro, braços e costas cortados por facão",
-type: "simple",
-title: "Jovem é torturado por gangue durante quatro horas em São Gabriel",
-link: "http://zh.clicrbs.com.br/rs/noticia/2015/03/jovem-e-torturado-por-gangue-durante-quatro-horas-em-sao-gabriel-4719558.html",
-source: {
-name: "ZH",
-icon: "http://adminocto.herokuapp.com/static/images/zh-big.png",
-url: "http://zh.clicrbs.com.br"
-},
-id: "4719558"
-},
-{
-timestamp: 1426525448,
-img: {
-alt: "Este país está mais forte que nunca",
-url: "http://www.clicrbs.com.br/rbs/image/17285561.jpg"
-},
-subtitle: "Presidente veio a público pela primeira vez depois de protestos contra o governo",
-type: "simple",
-tag: "Após manifestações",
-title: ""Este país está mais forte que nunca", diz Dilma em pronunciamento",
-link: "http://zh.clicrbs.com.br/rs/noticia/2015/03/este-pais-esta-mais-forte-que-nunca-diz-dilma-em-pronunciamento-4719577.html",
-source: {
-name: "ZH",
-icon: "http://adminocto.herokuapp.com/static/images/zh-big.png",
-url: "http://zh.clicrbs.com.br"
-},
-id: "4719577"
-},
-{
-timestamp: 1426524970,
-img: {
-alt: "Platini chama de "escravagismo" propriedade de jogadores por terceiros",
-url: "http://www.clicrbs.com.br/rbs/image/16830443.jpg"
-},
-subtitle: "Presidente da Uefa comanda cruzada contra empresários que detêm direitos econômicos de jogadores",
-type: "simple",
-tag: "Sem partilha de atletas",
-title: "Platini chama de "escravagismo" propriedade de jogadores por terceiros",
-link: "http://zh.clicrbs.com.br/rs/noticia/2015/03/platini-chama-de-escravagismo-propriedade-de-jogadores-por-terceiros-4719573.html",
-source: {
-name: "ZH",
-icon: "http://adminocto.herokuapp.com/static/images/zh-big.png",
-url: "http://zh.clicrbs.com.br"
-},
-id: "4719573"
-},
-{
-timestamp: 1426523962,
-tag: "Em crescimento",
-subtitle: "Crescimento foi maior que o mesmo mês de 2014",
-type: "simple",
-title: "PIB do Peru tem 66 meses consecutivos de expansão",
-link: "http://zh.clicrbs.com.br/rs/noticia/2015/03/pib-do-peru-tem-66-meses-consecutivos-de-expansao-4719559.html",
-source: {
-name: "ZH",
-icon: "http://adminocto.herokuapp.com/static/images/zh-big.png",
-url: "http://zh.clicrbs.com.br"
-},
-id: "4719559"
-}
-],
-highlights: [
-{
-timestamp: 1426524095,
-img: {
-alt: "Ex-atacante do Inter começa bem em novo clube na Polônia"",
-url: "http://www.clicrbs.com.br/rbs/image/17285535.jpg"
-},
-subtitle: "Artilheiro na base colorada, Rafael Porcellis fez dois gols em dois jogos",
-type: "simple",
-tag: "Prata da Dupla",
-title: "Ex-atacante do Inter começa bem em novo clube na Polônia",
-link: "http://zh.clicrbs.com.br/rs/noticia/2015/03/ex-atacante-do-inter-comeca-bem-em-novo-clube-na-polonia-4719556.html",
-source: {
-name: "ZH",
-icon: "http://adminocto.herokuapp.com/static/images/zh-big.png",
-url: "http://zh.clicrbs.com.br"
-},
-id: "4719556"
-}
-]
-}
+[{"timestamp":1427221800,"img":{"alt":"Ibra volta a pedir desculpas por chamar a França de \"país de merda\"","url":"http://www.clicrbs.com.br/rbs/image/17285059.jpg"},"subtitle":"Atacante sueco destacou que não se referiu às pessoas e que palavras foram tiradas do contexto","type":"simple","tag":"Polêmica em Paris","title":"Ibra volta a pedir desculpas por chamar a França de \"país de merda\"","link":"http://zh.clicrbs.com.br/rs/noticia/2015/03/ibra-volta-a-pedir-desculpas-por-chamar-a-franca-de-pais-de-merda-4719580.html","source":{"name":"ZH","icon":"http://adminocto.herokuapp.com/static/images/zh-big.png","url":"http://zh.clicrbs.com.br"},"id":"4719580"},{"timestamp":1426525509,"img":{"alt":"Cantor Cauby Peixoto recupera-se em casa","url":"http://www.clicrbs.com.br/rbs/image/17285588.jpg"},"subtitle":"Segundo a assessoria de imprensa do artista, ele está muito bem","type":"simple","tag":"Depois de um mês no hospital","title":"Cantor Cauby Peixoto recupera-se em casa","link":"http://zh.clicrbs.com.br/rs/noticia/2015/03/cantor-cauby-peixoto-recupera-se-em-casa-4719579.html","source":{"name":"ZH","icon":"http://adminocto.herokuapp.com/static/images/zh-big.png","url":"http://zh.clicrbs.com.br"},"id":"4719579"},{"timestamp":1426523969,"tag":"Violência","subtitle":"Vítima teve orelha, rosto, ombro, braços e costas cortados por facão","type":"simple","title":"Jovem é torturado por gangue durante quatro horas em São Gabriel","link":"http://zh.clicrbs.com.br/rs/noticia/2015/03/jovem-e-torturado-por-gangue-durante-quatro-horas-em-sao-gabriel-4719558.html","source":{"name":"ZH","icon":"http://adminocto.herokuapp.com/static/images/zh-big.png","url":"http://zh.clicrbs.com.br"},"id":"4719558"},{"timestamp":1426525448,"img":{"alt":"Este país está mais forte que nunca","url":"http://www.clicrbs.com.br/rbs/image/17285561.jpg"},"subtitle":"Presidente veio a público pela primeira vez depois de protestos contra o governo","type":"simple","tag":"Após manifestações","title":"\"Este país está mais forte que nunca\", diz Dilma em pronunciamento","link":"http://zh.clicrbs.com.br/rs/noticia/2015/03/este-pais-esta-mais-forte-que-nunca-diz-dilma-em-pronunciamento-4719577.html","source":{"name":"ZH","icon":"http://adminocto.herokuapp.com/static/images/zh-big.png","url":"http://zh.clicrbs.com.br"},"id":"4719577"},{"timestamp":1426524970,"img":{"alt":"Platini chama de \"escravagismo\" propriedade de jogadores por terceiros","url":"http://www.clicrbs.com.br/rbs/image/16830443.jpg"},"subtitle":"Presidente da Uefa comanda cruzada contra empresários que detêm direitos econômicos de jogadores","type":"simple","tag":"Sem partilha de atletas","title":"Platini chama de \"escravagismo\" propriedade de jogadores por terceiros","link":"http://zh.clicrbs.com.br/rs/noticia/2015/03/platini-chama-de-escravagismo-propriedade-de-jogadores-por-terceiros-4719573.html","source":{"name":"ZH","icon":"http://adminocto.herokuapp.com/static/images/zh-big.png","url":"http://zh.clicrbs.com.br"},"id":"4719573"},{"timestamp":1426523962,"tag":"Em crescimento","subtitle":"Crescimento foi maior que o mesmo mês de 2014","type":"simple","title":"PIB do Peru tem 66 meses consecutivos de expansão","link":"http://zh.clicrbs.com.br/rs/noticia/2015/03/pib-do-peru-tem-66-meses-consecutivos-de-expansao-4719559.html","source":{"name":"ZH","icon":"http://adminocto.herokuapp.com/static/images/zh-big.png","url":"http://zh.clicrbs.com.br"},"id":"4719559"}]
